fixed "Video jumps forward a few minutes after being paused for a few minutes". Work in progress responsive css.

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ html
 }
 body
 {
+    margin: 0;
   margin-bottom: 50px;
 }
 footer
@@ -40,6 +41,7 @@ footer
   display: block;
   text-align: center;
   width: 70%;
+  height: calc(70vw * 0.5625);
 }
 .status
 {
@@ -51,14 +53,15 @@ footer
 }
 #player
 {
-  max-height: 768px;
+  /* max-height: 768px; */
   width: 100%;
-  height: calc(100vw * 0.5625);
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: black;
   margin: 0.5rem;
+  margin: 0;
 }
 #no-video
 {
@@ -73,9 +76,10 @@ footer
   margin: 0 auto;
   text-align: center;
   margin-top: 1rem;
-  width: 450px;
-  max-width: 1280px;
-  margin-right: 0.5rem;
+  width: 30%;
+  max-width: 450px;
+  /* max-width: 1280px; */
+  /* margin-right: 0.5rem; */
 }
 .queue-title {
   cursor: pointer;
@@ -410,7 +414,7 @@ form {
 }
 
 @media (max-width: 1560px) {
-  #title-fraction
+  /* #title-fraction
   {
     display: none;
   }
@@ -433,5 +437,5 @@ form {
   .status
   {
     bottom: 120px;
-  }
+  } */
 }
